refactor: add java docs comment and remove unused methods